# cortexagent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ragas_gate.yml
agents/: __init__.py  _llm_client.py  analyst.py  critic.py  orchestrator.py  researcher.py  writer.py
api/: __init__.py  cost_tracker.py  main.py  schemas.py
audit/: __init__.py  audit_logger.py
config/: __init__.py  logging_setup.py  settings.py
dashboard/: app.py  style.css
docs/: 01_problem_statement.md  02_architecture.md  03_agents.md  04_retrieval.md  05_evaluation.md  06_safety.md  07_cost_engineering.md  08_tech_stack.md  09_innovations.md  10_future_work.md  CHANGELOG.md  DEPLOYMENT.md  INTERVIEW_PREP.md
docs/adr/: ADR-001-langgraph-vs-autogen.md  ADR-002-hybrid-retrieval.md  ADR-003-direct-redteam-testing.md
evaluation/: __init__.py  adversarial_prompts.json  benchmark_runner.py  golden_dataset.json  golden_dataset_ci.json  ragas_eval.py  raw_results_final.json  red_team.py  red_team_raw_baseline.json  red_team_report_baseline.html  report_final.html
rag/: __init__.py  ingestion.py  reranker.py  retrieval.py  self_rag.py
scripts/: find_my_ip.py  run_demo.py  setup.ps1  setup.sh
tests/: __init__.py  test_ragas_gate.py
tools/: __init__.py  calendar_tool.py  database_tool.py  mcp_definitions.py  web_search_tool.py
