[project]
name = "cortexagent"
version = "0.1.0"
description = "Production-grade agentic RAG platform for SEC 10-K financial research with RAGAS-gated CI/CD"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Yashwanth" }
]
license = { text = "MIT" }
keywords = ["langgraph", "rag", "ragas", "agents", "llm", "mcp", "sec-edgar"]

dependencies = [
    # --- Agent orchestration ---
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    
    # --- LLM provider SDKs (direct, not just via LangChain) ---
    "anthropic>=0.39.0",
    "google-genai>=0.3.0",
    
    # --- RAG stack ---
    "llama-index>=0.11.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    
    # --- Evaluation ---
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    
    # --- SEC EDGAR + document parsing ---
    "edgartools>=3.0.0",
    "pypdf>=5.0.0",
    "unstructured>=0.15.0",
    
    # --- Backend ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    
    # --- Frontend ---
    "streamlit>=1.40.0",
    
    # --- Utilities ---
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "tqdm>=4.66.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.0.0",
    
    # --- MCP protocol ---
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "rag", "evaluation", "tools", "audit", "api", "dashboard", "config"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
